# back_autotest_pydantic_test

./: .gitignore  README.md  conftest.py  env_example.env  pyproject.toml  script.py
clients/: __init__.py  _meta.py  _request.py  _session.py
clients/users/: users.py  users.pyi
dev_scripts/: pyi_generator.py
src/: __init__.py  cases.py  db_client.py  models.py  user_types.py
tests/: tests_users_service.py
